--- a/ansible/cluster-images.yaml
+++ b/ansible/cluster-images.yaml
@@ -11,14 +11,14 @@
   pre_tasks:
   - name: Make sure that kubectl is installed on the primary master if 'weavenet' network plugin was selected
     package: name=kubectl-{{ KUBERNETES_VERSION }} state=present
-    when: "'primary-master' in group_names and NETWORK_PLUGIN == 'weavenet'"
+    when: "'primary_master' in group_names and NETWORK_PLUGIN == 'weavenet'"
   - name: Get KUBECTL_VERSION for 'weavenet' network plugin if appliccable
     shell: kubectl version | base64 | tr -d '\n'
     register: KUBECTL_VERSION
-    when: "'primary-master' in group_names and NETWORK_PLUGIN == 'weavenet'"
+    when: "'primary_master' in group_names and NETWORK_PLUGIN == 'weavenet'"
   - name: Generate script for registering names and versions of images to pull
-    local_action: template mode=0755 src="{{ playbook_dir }}/roles/primary-master/templates/get-{{ NETWORK_PLUGIN }}-image-specs.sh.j2" dest="/tmp/get-{{ NETWORK_PLUGIN }}-image-specs.sh"
-    when: "'primary-master' in group_names"
+    local_action: template mode=0755 src="{{ playbook_dir }}/roles/primary_master/templates/get-{{ NETWORK_PLUGIN }}-image-specs.sh.j2" dest="/tmp/get-{{ NETWORK_PLUGIN }}-image-specs.sh"
+    when: "'primary_master' in group_names"
   - name: Register names and versions of images to pull
     local_action: command "/tmp/get-{{ NETWORK_PLUGIN }}-image-specs.sh"
     register: NETWORK_PLUGIN_IMAGE_SPECS_RESULT
@@ -43,14 +43,14 @@
   pre_tasks:
   - name: Make sure that kubectl is installed on the primary master if 'weavenet' network plugin was selected
     package: name=kubectl-{{ KUBERNETES_VERSION }} state=present
-    when: "'primary-master' in group_names and NETWORK_PLUGIN == 'weavenet'"
+    when: "'primary_master' in group_names and NETWORK_PLUGIN == 'weavenet'"
   - name: Get KUBECTL_VERSION for 'weavenet' network plugin if appliccable
     shell: kubectl version | base64 | tr -d '\n'
     register: KUBECTL_VERSION
-    when: "'primary-master' in group_names and NETWORK_PLUGIN == 'weavenet'"
+    when: "'primary_master' in group_names and NETWORK_PLUGIN == 'weavenet'"
   - name: Generate script for registering names and versions of images to pull
-    local_action: template mode=0755 src="{{ playbook_dir }}/roles/primary-master/templates/get-{{ NETWORK_PLUGIN }}-image-specs.sh.j2" dest="/tmp/get-{{ NETWORK_PLUGIN }}-image-specs.sh"
-    when: "'primary-master' in group_names"
+    local_action: template mode=0755 src="{{ playbook_dir }}/roles/primary_master/templates/get-{{ NETWORK_PLUGIN }}-image-specs.sh.j2" dest="/tmp/get-{{ NETWORK_PLUGIN }}-image-specs.sh"
+    when: "'primary_master' in group_names"
   - name: Register names and versions of images to pull
     local_action: command "/tmp/get-{{ NETWORK_PLUGIN }}-image-specs.sh"
     register: NETWORK_PLUGIN_IMAGE_SPECS_RESULT
