--- a/ansible/roles/prepare-nodes/tasks/main.yaml
+++ b/ansible/roles/prepare-nodes/tasks/main.yaml
@@ -12,26 +12,10 @@
   - kubeadm-{{ KUBERNETES_VERSION }}
   - kubernetes-cni-{{ KUBERNETES_CNI_VERSION }}
 
-- name: Install keepalived via package manager
-  package: name=keepalived-{{ KEEPALIVED_VERSION }} state=present
-  when: "'masters' in group_names"
-
-- name: Determine docker's cgroup driver and update kubelet accordinlgy
-  shell: docker info 2>&1 | grep "Cgroup Driver" | cut -d" " -f3
-  register: CGROUPS_DRIVER
-  changed_when: false
-
-- name: Use docker's cgroup driver and update kubelet accordinlgy if KUBERNETES_VERSION < 1.11.0
-  replace: "regexp='^(.*--cgroup-driver=)(systemd|cgroupfs)(.*)$' replace='\\1{{ CGROUPS_DRIVER.stdout_lines[0] }}\\3' path='/etc/systemd/system/kubelet.service.d/10-kubeadm.conf'"
-  when: "KUBERNETES_VERSION is version_compare('1.11.0', '<')"
-
-- name: Reload kubelet systemd unit
-  systemd: name=kubelet daemon-reload=yes
-
 - name: Enable kubelet
   service: name=kubelet enabled=yes
 
 - name: Create setup directory 
   file: path=/root/setup state=directory
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
 
