--- a/ansible/cluster-uninstall.yaml
+++ b/ansible/cluster-uninstall.yaml
@@ -13,3 +13,18 @@
   tags:
   - uninstall-cluster
 
+- name: Reboot Cluster
+  hosts: nodes
+  remote_user: root
+  gather_facts: no
+  any_errors_fatal: no
+  tasks:
+  - name: Reboot machine
+    command: /sbin/shutdown -r +1
+    async: 0
+    poll: 0
+    ignore_errors: true
+  tags:
+  - reboot-cluster
+
+
