--- a/ansible/etcd-operator.yaml
+++ b/ansible/etcd-operator.yaml
@@ -9,7 +9,7 @@
   gather_facts: no
   any_errors_fatal: yes
   roles:
-  - {role: etcd-operator,      when: "'primary-master'    in group_names" }
+  - {role: etcd-operator,      when: "'primary_master'    in group_names" }
   tags:
   - etcd-operator
 
