--- a/ansible/prometheus-operator.yaml
+++ b/ansible/prometheus-operator.yaml
@@ -9,7 +9,7 @@
   gather_facts: no
   any_errors_fatal: yes
   roles:
-  - {role: prometheus-operator,      when: "'primary-master'    in group_names" }
+  - {role: prometheus-operator,      when: "'primary_master'    in group_names" }
   tags:
   - prometheus-operator
 
