--- a/ansible/roles/join-token/tasks/main.yaml
+++ b/ansible/roles/join-token/tasks/main.yaml
@@ -3,7 +3,7 @@
 #
 ---
 - name: Generate a join token
-  shell: "(/bin/echo -e '#!/bin/sh\n\nrm -f /etc/kubernetes/kubelet.conf /etc/kubernetes/pki/ca.crt\n'; kubeadm token create --print-join-command) >/tmp/join-worker-node.sh"
+  shell: "(/bin/echo -e '#!/bin/sh\n\nrm -f /etc/kubernetes/kubelet.conf\n'; kubeadm token create --print-join-command) >/tmp/join-worker-node.sh"
 
 - name: Fetch script with generated command line for adding worker nodes
   fetch: src=/tmp/join-worker-node.sh dest=/tmp/ flat=yes
