--- a/ansible/roles/label-minions/tasks/main.yaml
+++ b/ansible/roles/label-minions/tasks/main.yaml
@@ -5,28 +5,28 @@
 
 - name: Create script for waiting for masters
   template: src="wait-for-masters.sh.j2" dest="/tmp/wait-for-masters.sh" mode=0755
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
 
 - name: Create script for waiting for minions
   template: src="wait-for-minions.sh.j2" dest="/tmp/wait-for-minions.sh" mode=0755
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
 
 - name: Wait for masters
   command: "sh /tmp/wait-for-masters.sh"
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
 
 - name: Wait for minions
   command: "sh /tmp/wait-for-minions.sh"
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
 
 - name: Enable fluentd on minions
-  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes --overwrite=true {{ hostvars[minion]['ansible_hostname'] }} beta.kubernetes.io/fluentd-ds-ready=\"true\""
+  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes --overwrite=true {{ hostvars[minion]['ansible_fqdn'] }} beta.kubernetes.io/fluentd-ds-ready=\"true\""
   with_items: "{{ groups['minions'] }}"
   loop_control:
     loop_var: minion
 
 - name: Label worker nodes as "worker"
-  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes --overwrite=true {{ hostvars[worker]['ansible_hostname'] }} mine/role=\"worker\""
+  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes --overwrite=true {{ hostvars[worker]['ansible_fqdn'] }} mine/role=\"worker\""
   with_items: "{{ groups['workers'] }}"
   loop_control:
     loop_var: worker
