--- a/ansible/roles/uninstall/tasks/main.yaml
+++ b/ansible/roles/uninstall/tasks/main.yaml
@@ -1,5 +1,5 @@
 #
-# Clean up all hosts, so that a new K8s cluster installation can be performed:
+# Cleanprimary_master up all hosts, so that a new K8s cluster installation can be performed:
 # - kubeadm reset is called on all hosts
 # - etcd is disabled and stopped
 # - the etcd data dir /var/lib/etcd/default.etcd is deleted
@@ -10,17 +10,28 @@
 - name: Stop and disable keepalived cluster
   service: name=keepalived enabled=false state=stopped
   when: "'masters' in group_names"
-
-- name: Run 'kubeadm reset'
-  shell: "if which kubeadm >/dev/null; then kubeadm reset -f; else /bin/true; fi"
+  ignore_errors: yes
 
 - name: Disable and stop etcd
   service: name=etcd enabled=false state=stopped
   when: "'masters' in group_names"
+  ignore_errors: yes
 
 - name: Disable and stop kubelet
   service: name=kubelet enabled=false state=stopped
   ignore_errors: yes
+
+- name: Run 'kubeadm reset'
+  shell: "if which kubeadm >/dev/null; then kubeadm reset -f; else /bin/true; fi"
+  ignore_errors: yes
+
+- name: Clean up ~/.kube
+  file: path=/root/.kube state=absent
+  when: "'masters' in group_names"
+
+- name: Clean up /var/run/dockershim.sock
+  file: path=/var/run/dockershim.sock state=absent
+  when: "'masters' in group_names"
 
 - name: Clean up /var/lib/etcd.default.etcd on all masters
   file: path=/var/lib/etcd/member state=absent
@@ -51,8 +62,3 @@
   file: path=/etc/kubernetes/manifests state=absent
   when: "'masters' in group_names"
 
-- name: Reboot machine
-  command: /sbin/shutdown -r +1
-  async: 0
-  poll: 0
-  ignore_errors: true
