--- a/ansible/roles/upgrade-cluster/tasks/main.yaml
+++ b/ansible/roles/upgrade-cluster/tasks/main.yaml
@@ -25,4 +25,4 @@
 
 - name: Set kube-dns replicas
   shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/kube-dns"
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
