--- a/ansible/roles/upgrade-nodes/tasks/upgrade-master.yaml
+++ b/ansible/roles/upgrade-nodes/tasks/upgrade-master.yaml
@@ -10,7 +10,7 @@
 
 - name: Cordon master node
   shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl cordon {{ hostvars[master]['ansible_hostname'] }}"
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
 
 - name: Shut down keepalived, kubelet, docker on master
   service: name={{ item }} state=stopped
@@ -34,8 +34,8 @@
 
 - name: Wait for masters
   command: "sh /tmp/wait-for-masters.sh"
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
 
 - name: Uncordon master node
   shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl uncordon {{ hostvars[master]['ansible_hostname'] }}"
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
