--- a/ansible/roles/upgrade-nodes/tasks/upgrade-minion.yaml
+++ b/ansible/roles/upgrade-nodes/tasks/upgrade-minion.yaml
@@ -10,7 +10,7 @@
 
 - name: Drain minion node
   shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl drain --delete-local-data --ignore-daemonsets {{ hostvars[minion]['ansible_hostname'] }}"
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
 
 - name: Shut down kubelet and docker on minion node
   service: name={{ item }} state=stopped
@@ -32,4 +32,4 @@
 
 - name: Uncordon minion node
   shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl uncordon {{ hostvars[minion]['ansible_hostname'] }}"
-  when: "'primary-master' in group_names"
+  when: "'primary_master' in group_names"
