--- a/ansible/uninstall-efk-stack.yaml
+++ b/ansible/uninstall-efk-stack.yaml
@@ -4,7 +4,7 @@
 ---
 
 - name: Uninstall Kibana
-  hosts: primary-master
+  hosts: primary_master
   remote_user: root
   gather_facts: no
   any_errors_fatal: yes
@@ -14,7 +14,7 @@
   - uninstall-kibana
 
 - name: Uninstall Elasticsearch
-  hosts: primary-master
+  hosts: primary_master
   remote_user: root
   gather_facts: no
   any_errors_fatal: yes
@@ -24,7 +24,7 @@
   - uninstall-elasticsearch
 
 - name: Uninstall Fluentd
-  hosts: primary-master
+  hosts: primary_master
   remote_user: root
   gather_facts: no
   any_errors_fatal: yes
