--- a/ansible/cluster-setup.yaml
+++ b/ansible/cluster-setup.yaml
@@ -62,7 +62,7 @@
   - network-plugin
   tags:
   - masters
-  - primary_master
+  - primary-master
 
 - name: Set up secondary masters
   hosts: secondary_masters
@@ -71,10 +71,20 @@
   any_errors_fatal: yes
   roles:
   - secondary-masters
-  - ha-settings
   tags:
   - masters
-  - secondary_masters
+  - secondary-masters
+
+- name: Set up secondary masters
+  hosts: masters
+  remote_user: root
+  gather_facts: yes
+  any_errors_fatal: yes
+  roles:
+  - ha-settings
+  tags:
+  - ha-settings
+  - masters
 
 - name: Create join token
   hosts: primary_master
@@ -86,7 +96,6 @@
   tags:
   - join-token
   - minions
-
 
 - name: Join minions
   hosts: minions
